--- a/src/components/FightScene.css
+++ b/src/components/FightScene.css
@@ -88,16 +88,36 @@ button:disabled {
     color: #ffc107;
 }
 
-.experience-bar-container {
+.experience-bar-container, .health-bar-container {
     width: 100%;
     height: 20px;
     background-color: #ccc;
     border-radius: 10px;
     margin-top: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.experience-bar, .health-bar {
+    height: 100%;
+    border-radius: 10px;
 }
 
 .experience-bar {
-    height: 100%;
-    background-color: #4caf50;
-    border-radius: 10px;
+    background-color: #7903af;
+}
+
+.health-bar {
+    background-color: #28a745;
+}
+
+.experience-text, .health-text {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: black; /* Texto negro para contraste */
+    font-weight: bold;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
