--- a/src/components/petStore/PetStore.css
+++ b/src/components/petStore/PetStore.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(104, 104, 104);
-
-
+    background-color: rgb(57, 57, 57);
+    border-radius: 5%;
+    padding-left: 10px;
 }
