--- a/src/components/FightScene.css
+++ b/src/components/FightScene.css
@@ -22,6 +22,12 @@ body {
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
     
 }
+.imgEnemy {
+        max-width: 150px;
+        max-height: 150px;
+        
+}
+      
 
 /* Character containers */
 .PlayerChar, .EnemyChar {
