--- a/src/components/CharacterSelector.css
+++ b/src/components/CharacterSelector.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     padding: 20px;
     max-width: 800px;
-    background-color: #505050;
+    background-color: rgba(128, 88, 50, 0.74);
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(102, 102, 102, 0.1);
     font-family: 'Arial', sans-serif;
