--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,10 +5,19 @@
     padding: 20px;
     max-width: 1000px;
     margin: auto;
-    background-color: #494949;
+    background-color: rgba(128, 88, 50, 0.74);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
 }
+body {
+    background-image: url('img/wallpaperHome.png');
+    background-size: cover;        /* Ajusta la imagen al tamaño del contenedor */
+    background-position: center;    /* Centra la imagen en el contenedor */
+    background-repeat: no-repeat;   /* Evita que la imagen se repita */
+    background-attachment: fixed;   /* Fija la imagen al fondo cuando se hace scroll */
+  }
+
 
 .stats {
     flex: 1;
