--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -11,3 +11,11 @@
     box-shadow: 0px 4px 10px rgba(102, 102, 102, 0.1);
     font-family: 'Arial', sans-serif;
 }
+
+body {
+    background-image: url('img/wallpaperHome.png');
+    background-size: cover;        /* Ajusta la imagen al tamaño del contenedor */
+    background-position: center;    /* Centra la imagen en el contenedor */
+    background-repeat: no-repeat;   /* Evita que la imagen se repita */
+    background-attachment: fixed;   /* Fija la imagen al fondo cuando se hace scroll */
+  }
