--- a/src/components/CharacterSelector.css
+++ b/src/components/CharacterSelector.css
@@ -5,64 +5,59 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px; /* Reducido de 20px a 10px */
     max-width: 800px;
+    max-height: 600px; /* Limita la altura máxima */
+    overflow-y: auto; /* Permite el scroll si el contenido es más grande */
     background-color: rgba(128, 88, 50, 0.74);
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(102, 102, 102, 0.1);
     font-family: 'Arial', sans-serif;
-
-}
-p {
-
 }
 
-/* Heading styles */
+
 .containerClases h1 {
     font-size: 2rem;
     color: #ffffff;
     margin-bottom: 10px;
-    align-self: center;
 }
 
-/* Paragraph styles */
 .containerClases p {
     font-size: 1.2rem;
-    align-self: center;
-    color:#fff;
+    color: #fff;
     margin-bottom: 20px;
 }
 
 /* Buttons container */
-.botones {
+.buttonsClasses {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 15px;
-    margin-left: 300px;
-    align-self: center;
+    grid-template-columns: repeat(2, 1fr); /* Dos columnas dinámicas */
+    gap: 20px; /* Espaciado entre botones */
+    justify-items: center; /* Centra los botones horizontalmente */
+    align-items: center; /* Centra los botones verticalmente */
+    width: 100%; /* Asegura que ocupe el ancho del contenedor */
 }
 
-/* Class buttons */
+/* Buttons */
 .botonesClases {
-    background-color: #fa5656;
-    color: #fff;
-    font-size: 1rem;
     padding: 10px 20px;
+    font-size: 1rem;
+    color: #ffffff;
+    background-color: #804c32;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s, transform 0.2s;
-    max-width: 100px;
-    margin-left: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s, background-color 0.2s;
 }
 
 .botonesClases:hover {
-    background-color: #b30000;
-    transform: scale(1.05);
+    background-color: #96644b;
+    transform: scale(1.05); /* Efecto de agrandado */
 }
 
 .botonesClases:active {
-    background-color: #b30000;
+    transform: scale(0.95); /* Efecto al hacer clic */
 }
 
 /* Link styles */
@@ -73,10 +68,4 @@ a {
 
 a:hover {
     text-decoration: underline;
-}
-
-/* Error message */
-.container p {
-    color: #ffffff;
-    font-weight: bold;
 }
