--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -11,11 +11,21 @@
     
 }
 
-.stats {
+.player {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0px;
+    background-color: rgba(112, 68, 26, 0.644);;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+}
+
+.stats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .stats p {
