--- a/src/components/petStore/PetStore.css
+++ b/src/components/petStore/PetStore.css
@@ -24,6 +24,7 @@
     background-color: rgb(57, 57, 57);
     border-radius: 5%;
     padding-left: 10px;
+    align-items: center;
 }
 
 section {
@@ -31,5 +32,11 @@ section {
     flex-direction: column;
     align-items: center;
     background-color: rgba(128, 88, 50, 0.74);
-    width: 500px;
+
+}
+
+.petText {
+    margin: 0px;
+    margin-right: 10px;
+    word-break: break-word;
 }
