--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+body {
+  background-image: url('/img/wallpaperHome.png');
+  background-size: cover;        /* Ajusta la imagen al tamaño del contenedor */
+  background-position: center;    /* Centra la imagen en el contenedor */
+  background-repeat: no-repeat;   /* Evita que la imagen se repita */
+  background-attachment: fixed;   /* Fija la imagen al fondo cuando se hace scroll */
+}
