--- a/src/components/petStore/PetStore.css
+++ b/src/components/petStore/PetStore.css
@@ -14,25 +14,30 @@
     word-break: break-all; 
     line-height: 1.5; 
     overflow-wrap: break-word;
-
+    margin-bottom: 10px;
 }
 
 .containerPets {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     background-color: rgb(57, 57, 57);
     border-radius: 5%;
     padding-left: 10px;
     align-items: center;
 }
-
+.imgPetandSelect {
+    display: flex;
+    flex-direction: column;
+}
 section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(128, 88, 50, 0.74);
-
+    background-color: #805832bd;
+    max-height: 500px;
+    min-height: 500px;
+    
 }
 
 .petText {
