--- a/src/components/designRpg.css
+++ b/src/components/designRpg.css
@@ -1,4 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
+@import url('https://fonts.cdnfonts.com/css/rpg');
+
+
 
 .rpgui-button {
     /* hide button default stuff */
@@ -19,11 +21,11 @@
     /* default size and display */
     max-width: 90%;
     min-width: 140px;
-    height: 60px;
+    height: 4em;
     display: inline-block;
     /* padding */
-    padding-left: 35px;
-    padding-right: 35px; }
+    padding-left: 30px;
+    padding-right: 30px; }
   
   /* button hover */
   .rpgui-button.hover,
@@ -222,4 +224,42 @@ label {
   
   .rpgui-list-imp .rpgui-selected {
     background: rgba(0, 0, 0, 0.3); }
+  
+
+  /********************** SCROLLBAR*******************/
+
+  /* to get pixelated images (nearest-neighbor filter) on all  browsers */
+.rpgui-pixelated {
+  -ms-interpolation-mode: nearest-neighbor;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -webkit-crisp-edges;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -o-crisp-edges;
+  image-rendering: pixelated; }
+  .rpgui-content ::-webkit-scrollbar,
+.rpgui-content::-webkit-scrollbar {
+  width: 18px; }
+
+/* Track */
+.rpgui-content ::-webkit-scrollbar-track,
+.rpgui-content::-webkit-scrollbar-track {
+  background-image: url("../components/designImg/scollbar/scrollbar-track.png");
+  background-size: 18px 60px;
+  background-repeat: repeat-y; }
+
+/* Handle */
+.rpgui-content ::-webkit-scrollbar-thumb,
+.rpgui-content::-webkit-scrollbar-thumb {
+  background-image: url("../components/designImg/scollbar/scrollbar-thumb.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat; }
+
+/* buttons */
+.rpgui-content ::-webkit-scrollbar-button,
+.rpgui-content::-webkit-scrollbar-button {
+  background-image: url("../components/designImg/scollbar/scrollbar-button.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat; }
+
+
   
