--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap');
 
 body {
   background-image: url('/img/wallpaperHome.png');
@@ -73,4 +74,14 @@ body {
   background-position: center;    /* Centra la imagen en el contenedor */
   background-repeat: no-repeat;   /* Evita que la imagen se repita */
   background-attachment: fixed;   /* Fija la imagen al fondo cuando se hace scroll */
+
 }
+.rpgui-content * {
+
+  font-family: "Cormorant Unicase", serif;
+  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 1.05em;
+}
+
