--- a/src/components/inventory/Inventory.css
+++ b/src/components/inventory/Inventory.css
@@ -1,10 +1,10 @@
 .containerInventory {
     /* background-color: #d2691e;  */
     width: 300px;
-    height: 400px;
+    height: 350px;
     max-height: 400px;
     /* border: 2px solid #8b4513;  */
-    border-radius: 10px; /* Rounded corners */
+    border-radius: 1px; /* Rounded corners */
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
     padding: 10px; 
     overflow-y: auto; /* Scroll if content exceeds height */
@@ -48,22 +48,16 @@
     background-color: #a0522d; /* Slightly lighter shade for hover effect */
 }
 
-button {
-    display: block;
-    margin: 10px auto;
-    padding: 8px 12px;
-    border: none;
-    background-color: #8b4513;
-    color: #fff;
-    font-size: 14px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+.editedButtond {
+    font-size:initial;
 }
 
-button:hover {
-    background-color: #a0522d; /* Match hover effect of list items */
-}
-
+.itemIventoryImg {
+    width: 90px;
+    height: 90px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover; /* Ajusta la imagen para cubrir el área sin deformarla */
+  }
 a {
     text-decoration: none; /* Elimina el subrayado por defecto */
 }
@@ -74,4 +68,36 @@ a {
     flex-direction: column;
     align-items: center;
     max-height: 500px;
+    max-width: 900px;
+    min-width: 900px;
+    border-radius: 5px;
+}
+
+.inventoryLayout {
+    display: flex;
+    justify-content: flex-start;
+    gap: 20px;
+    max-height: 300px;
+}
+
+
+
+.detailsContainer {
+    width: 300px;
+    background-color: #8b4513;
+    border-radius: 10px;
+    padding: 10px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.detailsContainer h2 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.detailsContainer p {
+    margin: 5px 0;
 }
