--- a/src/components/CharacterSelector.css
+++ b/src/components/CharacterSelector.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     padding: 10px; /* Reducido de 20px a 10px */
     max-width: 800px;
-    max-height: 550px; /* Limita la altura máxima */
+    /* max-height: 550px;  */
     overflow-y: auto; /* Permite el scroll si el contenido es más grande */
     background-color: rgba(128, 88, 50, 0.74);
     border-radius: 10px;
