--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,9 +2,10 @@
     position: fixed; /* Fija el contenedor en la pantalla */
     top: 0;
     left: 0;
-    width: 100%; /* Ocupa todo el ancho */
-    height: 80vh; /* Ocupa toda la altura de la ventana */
-    margin-top: 5%;
+    /* width: 100%; */
+    height: 50vh; /* Ocupa toda la altura de la ventana */
+    margin-top: 10%;
+    margin-left: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center; /* Centra el contenido */
@@ -21,7 +22,8 @@
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s ease;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     z-index: 100;
     width: 250px; /* Mantén el ancho fijo para la sidebar */
     font-size: 16px;
@@ -41,11 +43,14 @@
 }
 
 .toggle-sidebar {
+    position: absolute; /* Permite posicionarlo dentro de la sidebar */
+    top: 10px; /* Ajusta la altura del botón */
+    left: calc(100% - 15px); /* Coloca el botón justo al lado derecho de la barra */
     background-color: transparent;
     border: none;
     font-size: 1.5rem;
-    color: white;
-    /* margin-left: 15%; */
+    cursor: pointer;
+    transition: left 0.3s ease; /* Suaviza el movimiento cuando cambia la posición */
 }
 
 .stats {
@@ -69,15 +74,17 @@
     margin-left: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: calc(100% - 350px);
+    margin-left: 50px;
+    margin-right: 50px;
+    /* width: calc(100% - 350px); */
     /* margin-left: 30%; */
-    margin-left: 250px; 
+    /* margin-left: 250px;  */
 }
 
-.buttons button {
-
-    padding: 10px;
-    background-size: 100% 90%;
+.buttons button {   
+    
+    /* padding: 10px; */
+    background-size: 100% 100%;
 }
 
 
@@ -93,4 +100,14 @@
     display: flex;
     flex-direction: row;
     position: relative;
+}
+
+.home-container.hidden {
+    opacity: 0;
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.home-container.visible {
+    opacity: 1;
+    transition: opacity 0.5s ease, transform 0.5s ease;
 }
