--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,44 @@
   top:0;
   right:10px;
 }
+/* App.css */
+.app-container {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out; /* Aplica la transición de opacidad */
+}
+
+.app-container.visible {
+  opacity: 1;
+}
+
+.app-container.hidden {
+  opacity: 0;
+}
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 1.5rem;
+}
+
+.loading-container p {
+  margin: 0;
+
+}
+
+.loading-container::after {
+  content: '';
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
